0x07-python-test_driven_development/tests/5-text_indentation.txt
The ``5-text_indentation`` module
=================================
This module contains only one function: text_indentation. Error in project formatting scheme advances file numbering +1 for every task after 0: this is actually task 4.

Using ``text_indentation``
----------------------

First import
~~~~~~~~~~~~
First import ``text_indentation`` from the ``5-text_indentation`` module. Since the file name contains a numeral, you can't use the simple ``from 5-text_indentation import text_indentation``. You can instead use the following syntax:

    >>> text_indentation = __import__('5-text_indentation').text_indentation

Normal use
~~~~~~~~~~
The function can be used to print a formatted version of a given space-delimited string, where for each instance of ``.``, ``?``, or ``:`` the trailing space will be replaced by 2 newlines:

    >>> text_indentation("""Non autem hoc: igitur ne illud quidem. Fortasse id optimum, sed ubi illud: Plus semper voluptatis? Teneo, inquit, finem illi videri nihil dolere.""")
    Non autem hoc:
    <BLANKLINE>
    igitur ne illud quidem.
    <BLANKLINE>
    Fortasse id optimum, sed ubi illud:
    <BLANKLINE>
    Plus semper voluptatis?
    <BLANKLINE>
    Teneo, inquit, finem illi videri nihil dolere.
    <BLANKLINE>

If the last word does not end with one of those three symbols or have its own newline, a newline will not be added:
    >>> text_indentation("""Quae animi affectio suum cuique tribuens atque hanc, quam dico. Utinam quidem dicerent alium alio beatiorem! Iam ruinas videres""")
    Quae animi affectio suum cuique tribuens atque hanc, quam dico.
    <BLANKLINE>
    Utinam quidem dicerent alium alio beatiorem! Iam ruinas videres

    >>> text_indentation("")

    >>> text_indentation(". ? : -")
    .
    <BLANKLINE>
    ?
    <BLANKLINE>
    :
    <BLANKLINE>
    -

Printing a double newline after the three delimeter characters is independent of how the string is otherwise delimited by spaces:

    >>> text_indentation(".?:")
    .
    <BLANKLINE>
    ?
    <BLANKLINE>
    :
    <BLANKLINE>

    >>> text_indentation("Stop.No, come back?")
    Stop.
    <BLANKLINE>
    No, come back?
    <BLANKLINE>

    >>> text_indentation("Clearly. When? But do you know about:    that")
    Clearly.
    <BLANKLINE>
    When?
    <BLANKLINE>
    But do you know about:
    <BLANKLINE>
    that

Exceptions
~~~~~~~~~~
``text`` must be a string or the TypeError 'text must be a string' will be raised.
matrix not a list:

    >>> text_indentation(3456)
    Traceback (most recent call last):
        ...
    TypeError: text must be a string
